--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,10 +8,9 @@
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
 
-    "skipLibCheck": true,
-
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
+    "exactOptionalPropertyTypes": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitOverride": true,
     "noImplicitReturns": true,
