--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
 
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
+    "exactOptionalPropertyTypes": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitOverride": true,
     "noImplicitReturns": true,
